kubernetes/apps/observability/ntfy/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
